# claude-odoo-api

./: .dockerignore  .env.example  .env.http.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  DOCKER_MCP_CATALOG_SETUP.md  Dockerfile  PROCEDIMIENTO_CORRECCION.md  README.md  bmya-mcp-catalog.yaml  catalog.json  claude-desktop-config-example.json  create_odoo_invoices.py  docker-compose.yml  link-to-obsidian.sh  odoo-api-server.yaml  pyproject.toml  pytest.ini  registry.yaml  requirements.txt  setup-claude-desktop.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
deploy/: docker-compose.yml
docs/: remote-client-config.md
examples/: README.md  process_contact_images.py
src/: odoo_mcp_server.py
tests/: README.md  __init__.py  test_odoo_mcp_server.py
