[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-mcp-server"
version = "0.1.0"
description = "MCP Server for Odoo 19 External API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0"
]

[project.scripts]
odoo-mcp-server = "odoo_mcp_server:main"
